# s3s

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INVESTIGATION_CONTENT_ENCODING.md  README.md  justfile  pyproject.toml  test_oncelock
.cargo/: audit.toml  deny.toml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: audit.yml  ci.yml  copilot-setup-steps.yml  docker.yml  docs.yml  publish.yml  semver.yml
codegen/: Cargo.toml
codegen/src/v1/: aws_conv.rs  aws_proxy.rs  dto.rs  error.rs  mcp.rs  minio.rs  mod.rs  ops.rs  order.rs  rust.rs  s3_trait.rs  xml.rs
crates/s3s/: Cargo.toml
crates/s3s-aws/: Cargo.toml
crates/s3s-aws/src/conv/: builtin.rs  generated.rs  generated_minio.rs
crates/s3s-aws/src/proxy/: generated.rs  generated_minio.rs
crates/s3s-e2e/: Cargo.toml
crates/s3s-e2e/src/: advanced.rs  basic.rs  main.rs  post_policy.rs  utils.rs  xml_compat.rs
crates/s3s-fs/: Cargo.toml
crates/s3s-fs/src/: checksum.rs  fs.rs  main.rs  s3.rs  utils.rs
crates/s3s-fs/tests/: it_aws.rs  it_opendal.rs
crates/s3s-mcp/: Cargo.toml
crates/s3s-mcp/src/: generated.rs  lib.rs  main.rs
crates/s3s-model/: Cargo.toml
crates/s3s-model/src/: error_codes.rs  lib.rs  smithy.rs
crates/s3s-opendal/: Cargo.toml
crates/s3s-opendal/src/: lib.rs
crates/s3s-policy/: Cargo.toml
crates/s3s-proxy/: Cargo.toml
crates/s3s-test/: Cargo.toml
crates/s3s-test/src/: cli.rs  error.rs  report.rs  runner.rs  tcx.rs
crates/s3s-wasm/: Cargo.toml
crates/s3s/examples/: axum.rs  https.rs  region_aware.rs
crates/s3s/src/: capability.rs  checksum.rs  config.rs  crypto.rs  host.rs  lib.rs  path.rs  post_policy.rs  protocol.rs  region.rs  route.rs  s3_trait.rs  service.rs  stream.rs  validation.rs
crates/s3s/src/access/: generated.rs  generated_minio.rs  mod.rs
crates/s3s/src/dto/: copy_source.rs  etag.rs  etag_condition.rs  event.rs  event_stream.rs  generated.rs  generated_minio.rs  mod.rs  post_object.rs  post_response.rs  streaming_blob.rs  timestamp.rs
crates/s3s/src/http/: aws_chunked_stream.rs  body.rs  content_type.rs  de.rs  etag.rs  mod.rs  multipart.rs  ordered_headers.rs  request.rs  ser.rs
crates/s3s/src/ops/: generated.rs  generated_minio.rs  mod.rs  post_object.rs  signature.rs  tests.rs
crates/s3s/src/sig_v2/: methods.rs  post_signature_v2.rs
crates/s3s/src/sig_v4/: authorization_v4.rs  methods.rs  presigned_url_v4.rs  upload_stream.rs
crates/s3s/src/utils/: format.rs  mod.rs  rfc2047.rs
crates/s3s/src/xml/: de.rs  generated.rs  generated_minio.rs  mod.rs
crates/s3s/tests/: dto.rs  region.rs  timestamp.rs  xml.rs
data/: crawl.py  minio-patches.json  post-object-patches.json  s3_error_codes.json  test_crawl.py
docker/: Dockerfile
docs/: docker.md
scripts/: e2e-boto3-fs.sh  e2e-boto3-minio.sh  e2e-s3tests.sh  report-mint.py  report-s3tests.py  s3s-e2e.sh  s3tests-ref  s3tests.env  source-s3tests-ref.sh
tests/boto3/: put_object_no_content_length.py  rustfs_issue_1073.py  rustfs_issue_1785.py  rustfs_issue_984.py
