[workspace]
members = ["crates/*", "codegen"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/Nugine/s3s"
license = "Apache-2.0"
rust-version = "1.88.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
self_named_module_files = "deny"
# warn
dbg_macro = "warn"
# allow
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[profile.release]
debug = "line-tables-only"

[workspace.dependencies]
# AWS SDK dependencies
aws-config = { version = "1.8.12", default-features = false }
aws-credential-types = "1.2.11"
aws-sdk-s3 = "1.119.0"
aws-sdk-sts = "1.95.0"
aws-smithy-runtime-api = "1.10.0"
aws-smithy-types = "1.3.6"
aws-smithy-types-convert = "0.60.11"

# Crypto dependencies
hmac = "=0.13.0-rc.3"
md-5 = "=0.11.0-rc.3"
sha1 = "=0.11.0-rc.3"
sha2 = "=0.11.0-rc.3"
