[workspace]
members = ["crates/*", "codegen"]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/Nugine/s3s"
license = "Apache-2.0"
rust-version = "1.88.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
self_named_module_files = "deny"
# warn
dbg_macro = "warn"
# allow
module_name_repetitions = "allow"
multiple_crate_versions = "allow"

[profile.release]
debug = "line-tables-only"

[workspace.dependencies]
# Data structures
arrayvec = "0.7.6"
bytes = "1.11.1"
indexmap = "2.13.0"
smallvec = "1.15.1"

# Text encoding
atoi = { version = "2.0.0", default-features = false }
base64-simd = "0.8.0"
hex-simd = "0.8.0"
itoa = "1.0.17"

# Utilities
numeric_cast = "0.3.0"
std-next = "0.1.9"

# Crypto
crc-fast = "1.9.0"
hmac = "=0.13.0-rc.5"
md-5 = "=0.11.0-rc.5"
sha1 = "=0.11.0-rc.5"
sha2 = "=0.11.0-rc.5"

# Error handling
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async & concurrency
async-trait = "0.1.89"
futures = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"
tokio = "1.49.0"
transform-stream = "0.3.1"

# HTTP
http = "1.4.0"
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = "0.1.20"

# Logging & observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }

# CLI
clap = { version = "4.5.57", features = ["derive"] }

# AWS SDK
aws-config = { version = "1.8.12", default-features = false }
aws-credential-types = "1.2.11"
aws-sdk-s3 = "1.121.0"
aws-sdk-sts = "1.96.0"
aws-smithy-runtime-api = "1.11.3"
aws-smithy-types = "1.4.3"
aws-smithy-types-convert = "0.60.12"
