[package]
name = "s3s-codegen"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
scoped-writer = "0.3.0"
heck = "0.5.0"
std-next.workspace = true
numeric_cast.workspace = true
regex = "1.12.3"
serde.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
serde_urlencoded = "0.7.1"
s3s-model = { version = "0.13.0-alpha.2", path = "../crates/s3s-model" }
http.workspace = true
