[package]
name = "s3s-aws"
version = "0.13.0-alpha.1"
description = "S3 service adapter integrated with aws-sdk-s3"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
minio = ["s3s/minio"]

[dependencies]
async-trait = "0.1.89"
aws-sdk-s3.workspace = true
aws-smithy-runtime-api = { workspace = true, features = ["client", "http-1x"] }
aws-smithy-types = { workspace = true, features = ["http-body-1-x"] }
aws-smithy-types-convert = { workspace = true, features = ["convert-time"] }
hyper = "1.8.1"
s3s = { version = "0.13.0-alpha.1", path = "../s3s", default-features = false }
std-next = "0.1.9"
sync_wrapper = "1.0.2"
tracing = "0.1.44"
transform-stream = "0.3.1"
