[package]
name = "s3s-e2e"
version = "0.13.0-alpha.2"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
s3s-test = { version = "0.13.0-alpha.2", path = "../s3s-test" }
tracing = "0.1.44"
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts = { workspace = true, features = ["behavior-version-latest"] }
http-body-util = "0.1.3"
futures = { version = "0.3.31", default-features = false }
bytes = "1.11.0"
http-body = "1.0.1"
md-5.workspace = true
base64-simd = "0.8.0"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
s3s-test = { version = "0.13.0-alpha.2", path = "../s3s-test" }
