[package]
name = "s3s-e2e"
version = "0.13.0-alpha.2"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
s3s-test = { version = "0.13.0-alpha.2", path = "../s3s-test" }
tracing.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sts = { workspace = true, features = ["behavior-version-latest"] }
http-body-util.workspace = true
futures.workspace = true
bytes.workspace = true
http-body.workspace = true
md-5.workspace = true
base64-simd.workspace = true
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls"] }

[build-dependencies]
s3s-test = { version = "0.13.0-alpha.2", path = "../s3s-test" }
