[package]
name = "s3s-fs"
version = "0.13.0-alpha.2"
description = "An experimental S3 server based on file system"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "s3s-fs"
required-features = ["binary"]

[features]
binary = ["tokio/full", "dep:clap", "dep:tracing-subscriber", "dep:hyper-util"]

[dependencies]
async-trait.workspace = true
base64-simd.workspace = true
bytes.workspace = true
chrono = { workspace = true, default-features = false, features = ["std", "clock"] }
clap = { workspace = true, optional = true }
crc32c.workspace = true
futures.workspace = true
hex-simd.workspace = true
hyper-util = { workspace = true, optional = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
mime.workspace = true
numeric_cast.workspace = true
path-absolutize.workspace = true
s3s = { version = "0.13.0-alpha.2", path = "../s3s" }
serde.workspace = true
serde_json.workspace = true
std-next.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, optional = true }
transform-stream.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
aws-config.workspace = true
aws-credential-types = { workspace = true, features = ["test-util"] }
aws-sdk-s3 = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-sts = { workspace = true, features = ["behavior-version-latest"] }
futures-util.workspace = true
hyper = { workspace = true, features = ["http1", "http2"] }
hyper-util = { workspace = true, features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
once_cell.workspace = true
opendal = { workspace = true, features = ["services-s3"] }
s3s-aws = { version = "0.13.0-alpha.2", path = "../s3s-aws" }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
