[package]
name = "s3s-model"
version = "0.13.0-alpha.2"
description = "S3 Protocol Model"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
numeric_cast.workspace = true
serde.workspace = true
serde_json.workspace = true
