[package]
name = "s3s-policy"
version = "0.13.0-alpha.2"
description = "S3 Policy Language"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
indexmap = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
