[package]
name = "s3s-proxy"
version = "0.13.0-alpha.2"
description = "S3 Proxy"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
hyper-util = { version = "0.1.19", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
s3s = { version = "0.13.0-alpha.2", path = "../s3s" }
s3s-aws = { version = "0.13.0-alpha.2", path = "../s3s-aws" }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
