[package]
name = "s3s-proxy"
version = "0.13.0-alpha.2"
description = "S3 Proxy"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
clap.workspace = true
hyper-util = { workspace = true, features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
s3s = { version = "0.13.0-alpha.2", path = "../s3s" }
s3s-aws = { version = "0.13.0-alpha.2", path = "../s3s-aws" }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
