[package]
name = "s3s-test"
version = "0.13.0-alpha"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.148"
indexmap = "2.12.1"
colored = "3.0.0"
regex = "1.12.2"
backtrace = "0.3.76"
const-str = { version = "1.0.0", features = ["std", "proc"] }
