[package]
name = "s3s-test"
version = "0.13.0-alpha.2"
description = "s3s test suite"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
dotenvy = "0.15.7"
serde_json.workspace = true
indexmap.workspace = true
colored = "3.1.1"
regex = "1.12.3"
backtrace = "0.3.76"
const-str = { version = "1.1.0", features = ["std", "proc"] }
