[package]
name = "s3s-wasm"
version = "0.0.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
futures = { workspace = true, features = ["executor"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
http.workspace = true
s3s = { version = "0.13.0-alpha.2", path = "../s3s", default-features = false }

[lints]
workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
