[package]
name = "s3s"
version = "0.13.0-alpha"
description = "S3 Service Adapter"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
openssl = ["dep:openssl"]
minio = []

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.75", optional = true }

[dependencies]
arrayvec = "0.7.6"
async-trait = "0.1.89"
atoi = { version = "2.0.0", default-features = false }
base64-simd = "0.8.0"
bytes = "1.11.0"
bytestring = "1.5.0"
chrono = { version = "0.4.42", default-features = false }
crc-fast = "1"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
hex-simd = "0.8.0"
hmac.workspace = true
http-body = "1.0.1"
http-body-util = "0.1.3"
httparse = "1.10.1"
hyper = { version = "1.8.1", features = ["http1", "server"] }
itoa = "1.0.17"
md-5.workspace = true
memchr = "2.7.6"
mime = "0.3.17"
nom = "8.0.0"
numeric_cast = "0.3.0"
pin-project-lite = "0.2.16"
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_urlencoded = "0.7.1"
sha1.workspace = true
sha2.workspace = true
smallvec = "1.15.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "macros"] }
tower = { version = "0.5.2", default-features = false }
tracing = "0.1.44"
transform-stream = "0.3.1"
urlencoding = "2.1.3"
zeroize = "1.8.2"
std-next = "0.1.9"
sync_wrapper = { version = "1.0.2", default-features = false }
tokio = { version = "1.48.0", features = ["time"] }
const-str = "0.7.1"
http = "1.4.0"
subtle = "2.6.1"
cfg-if = "1.0.4"

[dev-dependencies]
axum = "0.8.8"
clap = { version = "4.5.53", features = ["derive"] }
hyper-util = { version = "0.1.19", features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
rustls-pemfile = "2.2.0"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.17", features = ["io"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
