[package]
name = "s3s"
version = "0.13.0-alpha.2"
description = "S3 Service Adapter"
readme = "../../README.md"
keywords = ["s3"]
categories = ["web-programming", "web-programming::http-server"]
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
openssl = ["dep:openssl"]
minio = []

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10.75", optional = true }

[dependencies]
arrayvec.workspace = true
async-trait.workspace = true
atoi.workspace = true
base64-simd.workspace = true
bytes.workspace = true
bytestring = "1.5.0"
chrono = { version = "0.4.43", default-features = false }
crc-fast.workspace = true
futures = { workspace = true, features = ["std"] }
hex-simd.workspace = true
hmac.workspace = true
http-body.workspace = true
http-body-util.workspace = true
httparse = "1.10.1"
hyper = { workspace = true, features = ["http1", "http2", "server"] }
itoa.workspace = true
md-5.workspace = true
memchr = "2.7.6"
mime = "0.3.17"
nom = "8.0.0"
numeric_cast.workspace = true
pin-project-lite.workspace = true
quick-xml = { version = "0.37.5", features = ["serialize"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
sha1.workspace = true
sha2.workspace = true
smallvec.workspace = true
thiserror.workspace = true
time = { version = "0.3.47", features = ["formatting", "parsing", "macros"] }
tower = { version = "0.5.3", default-features = false }
tracing.workspace = true
transform-stream.workspace = true
url = "2.5.8"
urlencoding = "2.1.3"
zeroize = "1.8.2"
std-next.workspace = true
sync_wrapper = { version = "1.0.2", default-features = false }
tokio = { workspace = true, features = ["time"] }
const-str = "1.1.0"
http.workspace = true
subtle = "2.6.1"
cfg-if = "1.0.4"
arc-swap = "1.8.1"

[dev-dependencies]
axum = "0.8.8"
clap.workspace = true
hyper-util = { workspace = true, features = ["server-auto", "server-graceful", "http1", "http2", "tokio"] }
rustls-pemfile = "2.2.0"
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26.4"
tokio-util = { version = "0.7.18", features = ["io"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
